[gd_scene load_steps=3 format=3 uid="uid://dtbxse50uc61r"]

[ext_resource type="Script" path="res://CdB/Scripts/CDBcriar_baralho.gd" id="1_n8tfw"]
[ext_resource type="Texture2D" uid="uid://dm3q2dwwrse74" path="res://icon.svg" id="2_ybeb2"]

[node name="CriarBaralho" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n8tfw")

[node name="Inputs" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0347222
anchor_top = 0.121914
anchor_right = 0.505209
anchor_bottom = 0.532407
metadata/_edit_use_anchors_ = true
metadata/_edit_group_ = true

[node name="nomeBaralho" type="LineEdit" parent="Inputs"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
placeholder_text = "nome do baralho"
clear_button_enabled = true

[node name="descBaralho" type="LineEdit" parent="Inputs"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
placeholder_text = "descrição do baralho(ctrl+v)"
clear_button_enabled = true

[node name="localCSV" type="Button" parent="Inputs"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Selecionar local do .csv"

[node name="localIMG" type="Button" parent="Inputs"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Selecionar local das imagens
"

[node name="localICON" type="Button" parent="Inputs"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Selecionar  icone"

[node name="Labels" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.518229
anchor_top = 0.134259
anchor_right = 0.988715
anchor_bottom = 0.46142
metadata/_edit_use_anchors_ = true
metadata/_edit_group_ = true

[node name="nomeBaralho" type="Label" parent="Labels"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="descBaralho" type="Label" parent="Labels"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="localCSV" type="Label" parent="Labels"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="localIMG" type="Label" parent="Labels"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="icone" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.427083
anchor_top = 0.570988
anchor_right = 0.59809
anchor_bottom = 0.865741
texture = ExtResource("2_ybeb2")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="criarBaralho" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.697049
anchor_top = 0.842593
anchor_right = 0.980035
anchor_bottom = 0.96142
theme_override_font_sizes/font_size = 50
text = "Criar baralho
"
metadata/_edit_use_anchors_ = true

[node name="voltar" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0251736
anchor_top = 0.83179
anchor_right = 0.224826
anchor_bottom = 0.950617
theme_override_font_sizes/font_size = 50
text = "voltar
"
metadata/_edit_use_anchors_ = true

[node name="CSVFILE" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="ICONFILE" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
initial_position = 1
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="IMAGESFOLDER" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a Directory"
initial_position = 1
size = Vector2i(600, 400)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="LocalPasta" type="Label" parent="."]
layout_mode = 0
offset_left = 47.0
offset_top = 6.0
offset_right = 551.0
offset_bottom = 52.0
text = "Local de criação da pasta: "

[connection signal="text_changed" from="Inputs/nomeBaralho" to="." method="_on_nome_baralho_text_changed"]
[connection signal="text_changed" from="Inputs/descBaralho" to="." method="_on_desc_baralho_text_changed"]
[connection signal="pressed" from="Inputs/localCSV" to="." method="_on_local_csv_pressed"]
[connection signal="pressed" from="Inputs/localIMG" to="." method="_on_local_img_pressed"]
[connection signal="pressed" from="Inputs/localICON" to="." method="_on_local_icon_pressed"]
[connection signal="pressed" from="criarBaralho" to="." method="_on_criar_baralho_pressed"]
[connection signal="pressed" from="voltar" to="." method="_on_voltar_pressed"]
[connection signal="file_selected" from="CSVFILE" to="." method="_on_csvfile_file_selected"]
[connection signal="file_selected" from="ICONFILE" to="." method="_on_iconfile_file_selected"]
[connection signal="dir_selected" from="IMAGESFOLDER" to="." method="_on_imagesfolder_dir_selected"]
